--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -21,6 +21,9 @@ html, body {
 	background: grey;
 	padding: 2px;
 }
+#content {
+	
+}
 
 h1 { 
 	display: table-cell;
@@ -43,17 +46,14 @@ h3 {
 	font-size: 200%;
 	text-align: center;
 }
-#althead {
+.althead {
 	background: #EDBD3E;
 }
-#althead2 {
-	background: #EDBD3E;
-}
-#mainhead {
+.mainhead {
 	background: white;
 }
 
-#main {
+.main {
     min-height: 100%;
 	position: relative;
 	width: 100%;
@@ -63,28 +63,7 @@ h3 {
     box-sizing:border-box;
     display: table;
 }
-#raw {
-	min-height: 80%;
-	position: relative;
-	width: 100%;
-	background: #EDBD3E;
-	padding: 20px;
-	-moz-box-sizing:border-box;
-    -webkit-box-sizing:border-box;
-    box-sizing:border-box;
-    display: table;
-}
-#manu {
-	min-height: 80%;
-	position: relative;
-	width: 100%;
-	padding: 20px;
-	-moz-box-sizing:border-box;
-    -webkit-box-sizing:border-box;
-    box-sizing:border-box;
-    display: table;
-}
-#enviro{
+.alternate {
 	min-height: 80%;
 	position: relative;
 	width: 100%;
